* Removed unused configuration. * Created a PlainFileReporter to write reports to the filesystem as surefire does. * Added the source plugin to the parent POM.
reviewer: matias.mirabelli